# awscdk-clearml

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  app.py  aws-autoscaler.py  aws_autoscaler.py  cdk.context.json  example_aws_autoscaler.yaml  hello-world-task.py  pyproject.toml  tasks.py
.github/workflows/: deployment.yml  github-actions-demo.yml  integration.yml
src/cdk_clearml/: backup_service.py  clearml_backup_docker_image.py  dns.py  ec2_autoscaled_instance.py  ec2_instance.py  stack.py
src/cdk_clearml/resources/: docker-compose.yml  user-data.template.sh
src/cdk_clearml/resources/clearml-s3-backup-service/: Dockerfile
src/cdk_clearml/utils/: aws_account_info.py
